# advent-of-code

./: .gitignore  README.md  main.py
2021/: main.py
2021/code/: solution_1.py  solution_11.py  solution_13.py  solution_15.py  solution_2.py  solution_6.py  solution_8.py
aoc-2021/: README.md
aoc-2021/code/: solution_10.py  solution_12.py  solution_14.py  solution_16.py  solution_3.py  solution_4.py  solution_5.py  solution_7.py  solution_9.py
aoc-2022/: README.md
aoc-2022/src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  lib.rs
aoc-2023/: Cargo.toml
aoc-2023/src/: day1.rs  day2.rs  day4.rs  day6.rs
